[tool.poetry]
name = "graphql"
version = "0.1.0"
description = ""
authors = ["RomanGf <gafyak.roma@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
psycopg2 = "^2.9.3"
graphene-django = "^2.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
